objects/csp_defensive_strategy__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Created_On__c</fullName>
        <label>Activity Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csp__c</fullName>
        <label>csp</label>
        <referenceTo>Competitive_Sales_Plan__c</referenceTo>
        <relationshipLabel>CSP Defensive Strategies</relationshipLabel>
        <relationshipName>CSP_Defensive_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ct_countertactic__c</fullName>
        <label>ct_countertactic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ct_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ct_owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CSP Defensive Strategies</relationshipLabel>
        <relationshipName>CSP_Defensive_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ct_timing__c</fullName>
        <label>ct_timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>our_weakness_countered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>our_weakness_countered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>our_weakness_customer_validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>our_weakness_customer_validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>our_weakness_text__c</fullName>
        <label>our_weakness_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>their_strength_countered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>their_strength_countered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>their_strength_customer_validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>their_strength_customer_validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>their_strength_text__c</fullName>
        <label>their_strength_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSP Defensive Strategy</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CSP Defensive Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSP Defensive Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>